fix: toggle button visibility on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@ body {
   display: flex;
   flex-direction: column;
   max-height: 100%;
+  min-height: 5.6rem;
 }
 
 .box:hover {
